tests/tests/roundtrip/invalid/semantic/args_issue/01/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/args_issue/01/input.essence:2:34:
  |
2 | such that c = alldifferent_except([1, 2, 5, 1, 6])
  |                                  ^^^^^^^^^^^^^^^^^
Insufficient args, expected 2 got 1

